--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         }
     },
     "require": {
-        "php": "^8.2"
+        "php": ">=8.2"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.62",
